Validate gross/dry-ice weights on process

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -14,3 +14,4 @@ viewOpenProposals=View Open Packaging Proposals
 plantAssignment=Plant Assignment
 CREATE_PKG_PROPOSAL_STEP_2=Create a Packaging Proposal in Step 2 first
 DRY_ICE_GT_GROSS=Dry ice weight cannot exceed gross weight
+GROSS_WEIGHT_REQUIRED=Gross weight is required
