UI changes , getting rid of word Proposal and replacing with Shipment & i18N texts

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,8 +10,69 @@ appDescription=Internal Sample transfer
 #XTIT: Main view title
 title=Internal Sample Transfer
 
-viewOpenProposals=View Open Packaging Proposals
-plantAssignment=Plant Assignment
+showContainers=Show Container(s)
+containersColumn=Container(s)
+containersTitle=Containers for Proposal {0}
+containersLoadFailed=Failed to load containers.
+close=Close
 CREATE_PKG_PROPOSAL_STEP_2=Create a Packaging Proposal in Step 2 first
 DRY_ICE_GT_GROSS=Dry ice weight cannot exceed gross weight
 GROSS_WEIGHT_REQUIRED=Gross weight is required
+
+# PP_Wizard view
+ppWizard.pageTitle=Create Packaging Proposal
+ppWizard.step1Title=Select Plant
+ppWizard.step2Title=Select Containers
+ppWizard.step3Title=Process Proposal
+ppWizard.plantAssignmentTitle=Plant Assignment
+ppWizard.assignedPlant=Assigned Plant
+ppWizard.selectPlant=Select Plant
+ppWizard.assignPlant=Assign Plant
+ppWizard.viewShipmentHistory=View Shipment History
+ppWizard.containersForPlant=Containers for plant
+ppWizard.account=Account
+ppWizard.allAccounts=All Accounts
+ppWizard.getSamples=Get Samples
+ppWizard.abandonContainer=Abandon Container
+ppWizard.packContainer=Pack Container(s)
+ppWizard.containerId=Container Id
+ppWizard.instanceUniqueId=Instance(unique id)
+ppWizard.samplesReceived=Samples Received
+ppWizard.totalSamples=Total Samples
+ppWizard.pulledSamples=Pulled Samples
+ppWizard.status=Status
+ppWizard.createdPackageId=Created Package ID:
+ppWizard.unassignContainer=Unassign Container
+ppWizard.instanceConInsId=Instance(ConInsId)
+ppWizard.processingDetailsTitle=Enter Processing Details
+ppWizard.weightGross=Weight Gross
+ppWizard.weightDryIce=Weight Dry Ice
+ppWizard.weightUnits=Weight Units
+ppWizard.packageMaterial=Package Material
+ppWizard.choosePlaceholder=Choose...
+ppWizard.comments=Comments
+ppWizard.processProposal=Process Packaging Proposal
+
+# PP_Process view
+ppProcess.pageTitle=Process Shipment
+ppProcess.packageIdLabel=Package ID:
+ppProcess.plantLabel=Plant:
+ppProcess.weightGross=Weight (Gross)
+ppProcess.weightDryIce=Weight (Dry Ice)
+ppProcess.units=Units
+ppProcess.unitsPlaceholder=LB / KG
+ppProcess.packagingMaterial=Packaging Material
+ppProcess.searchPackagingMaterial=Search Packaging Material
+ppProcess.comments=Comments
+ppProcess.assignedContainers=Assigned Containers
+ppProcess.getSamples=Get Samples
+ppProcess.processShipment=Process Shipment
+ppProcess.containerId=Container ID
+ppProcess.inspectionId=Inspection ID
+
+# PP_List view
+ppList.pageTitle=Shipment History
+ppList.filters=Filters
+ppList.shipmentsHeader=Shipments
+ppList.startNewShipment=Start new shipment
+ppList.goToShipment=Go to Shipment
