More changes to change term Proposal to Shipment

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,18 +12,18 @@ title=Internal Sample Transfer
 
 showContainers=Show Container(s)
 containersColumn=Container(s)
-containersTitle=Containers for Proposal {0}
+containersTitle=Containers for Shipment {0}
 containersLoadFailed=Failed to load containers.
 close=Close
-CREATE_PKG_PROPOSAL_STEP_2=Create a Packaging Proposal in Step 2 first
+CREATE_PKG_PROPOSAL_STEP_2=Complete Step 2 first 
 DRY_ICE_GT_GROSS=Dry ice weight cannot exceed gross weight
 GROSS_WEIGHT_REQUIRED=Gross weight is required
 
 # PP_Wizard view
-ppWizard.pageTitle=Create Packaging Proposal
+ppWizard.pageTitle=Create Shipment
 ppWizard.step1Title=Select Plant
 ppWizard.step2Title=Select Containers
-ppWizard.step3Title=Process Proposal
+ppWizard.step3Title=Process Shipment
 ppWizard.plantAssignmentTitle=Plant Assignment
 ppWizard.assignedPlant=Assigned Plant
 ppWizard.selectPlant=Select Plant
@@ -51,7 +51,7 @@ ppWizard.weightUnits=Weight Units
 ppWizard.packageMaterial=Package Material
 ppWizard.choosePlaceholder=Choose...
 ppWizard.comments=Comments
-ppWizard.processProposal=Process Packaging Proposal
+ppWizard.processProposal=Process Shipment
 
 # PP_Process view
 ppProcess.pageTitle=Process Shipment
